infra/kubernetes/stg/default/deployment-calc-api.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: calc-api
  labels:
    app: calc-api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: calc-api

  template:
    metadata:
      labels:
        app: calc-api

    spec:
      containers:
        - name: calc-api
          image: asia.gcr.io/presto-pay-dev/presto-pay-stg-calc-api:latest
          imagePullPolicy: Always
          ports:
            - name: calc-api
              containerPort: 8080
            - name: monitoring
              containerPort: 8081
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - mountPath: /secret
              name: firebase-secret-volume
              readOnly: true
      volumes:
        - name: firebase-secret-volume
          secret:
            secretName: firebase-secret
