infra/kubernetes/stg/default/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  labels:
    app: redis

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis:6.0.8-alpine
          resources:
            requests:
              cpu: 20m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 200Mi
          ports:
            - name: redis
              containerPort: 6379
