infra/kubernetes/stg/default/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-api

spec:
  selector:
    app: user-api

  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: calc-api

spec:
  selector:
    app: calc-api

  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
